--- a/Ubung1.2/Ubung1.2.vcxproj.filters
+++ b/Ubung1.2/Ubung1.2.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Ub9.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Ubung1.2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Ub9.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
