--- a/Ubung1.2/Ubung1.2.vcxproj
+++ b/Ubung1.2/Ubung1.2.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Ub1.h" />
     <ClInclude Include="Ub9.h" />
   </ItemGroup>
   <ItemGroup>
