--- a/Ubung1.2/Ubung1.2.vcxproj.filters
+++ b/Ubung1.2/Ubung1.2.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Ub9.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Ub1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
