--- a/Ubung1.2/Ubung1.2.vcxproj.filters
+++ b/Ubung1.2/Ubung1.2.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="Ub9.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Ub1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
