--- a/Ubung1.2/Ubung1.2.vcxproj
+++ b/Ubung1.2/Ubung1.2.vcxproj
@@ -162,6 +162,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Ub1.cpp" />
     <ClCompile Include="Ub9.cpp" />
     <ClCompile Include="Ubung1.2.cpp" />
   </ItemGroup>
