--- a/Lab2/Lab2/Lab2.vcxproj.filters
+++ b/Lab2/Lab2/Lab2.vcxproj.filters
@@ -33,4 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="zahlen.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
